[package]
name = "boot"
version = "0.1.0"
authors = ["Anselm Hook <anselm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

broker = { path = "../broker" }
display = { path = "../display" }
scripting = { path = "../scripting" }
