[package]
name = "display"
version = "0.1.0"
authors = ["Anselm Hook <anselm@gmail.com>"]
edition = "2018"

[dependencies]

crossbeam = "0.8.1"
winit = "0.25.0"
winit_input_helper = "0.10.0"

service = { path = "../service" }


# this is a test of the pixels rendering library [ see https://crates.io/crates/pixels ]

pixels = "0.3.0"