[package]
name = "graphics"
version = "0.1.0"
edition = "2018"

[dependencies]

crossbeam = "0.8.1"

service = { path = "../service" }

bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features=["jpeg"] }

bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git" }
