#
# This is a wrapper for our application that presents a view interface leveraging makepad
#

[package]
name = "viewmakepad"
version = "0.1.0"
authors = ["Anselm Hook <anselm@gmail.com>"]
edition = "2018"

[dependencies]

# rustface = "*"

crossbeam = "0.8.1"
winit = "0.25.0"
winit_input_helper = "0.10.0"

service = { path = "../service" }


[dependencies.makepad-render]
path="../../makepad/render"

[dependencies.makepad-widget]
path="../../makepad/widget"
